minor changes to active state

--- a/index.css
+++ b/index.css
@@ -236,12 +236,7 @@ p.test-auth {
     }
     
     header {
-        padding: 0 .5em;
-        align-items: baseline;
-    }
-    
-    header:last-child {
-        padding-right: 0;
+        padding: 1em;
     }
     
     nav ul {
@@ -252,8 +247,39 @@ p.test-auth {
         opacity: 1;
         font-size: .6em;
         height: auto;
-        padding-top: 0;
-        
+        padding: 0;
+        margin: 0;
+    }
+
+    nav ul li {
+        padding: 0;
+        margin: 0;
+    }
+
+    nav ul li a {
+        font-weight: normal;
+        padding: 0 1em;
+    }
+
+    nav ul li:last-child a {
+        padding-right: 0;
+    }
+
+    nav .active a {
+        font-weight: bold;
+    }
+
+    nav ul li {
+        position: relative;
+    }
+
+    nav .res a::before {
+        position: absolute;
+        content: '';
+        width: 40%;
+        height: 5px;
+        top: 20px;
+        background: #72A84A;
     }
     
     p.subtitle {
