--- a/index.css
+++ b/index.css
@@ -276,9 +276,9 @@ p.test-auth {
     nav .res a::before {
         position: absolute;
         content: '';
-        width: 40%;
+        width: 90%;
         height: 5px;
-        top: 20px;
+        top: 25px;
         background: #72A84A;
     }
     
@@ -294,17 +294,12 @@ p.test-auth {
         margin-bottom: .25em;
     }
     
-    .left {
-        text-align: left;
-        margin-left: 3em;
-    }
-    
     ul.featured-cabins,
     ul.features,
     ul.testimonials {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 1em;
+        grid-gap: 3em;
         width: 90%;
         justify-content: space-between;
         margin: 2em auto;
@@ -317,4 +312,95 @@ p.test-auth {
     ul.testimonials {
         margin-top: 3em;
     }
+}
+
+@media (min-width: 1000px) {
+    body {
+        font-size: 20px;
+    }
+
+    .wrapper {
+        text-align: left;
+    }
+
+    .flex {
+        display: flex;
+    }
+
+    .hero {
+        padding: 8em 4em;
+    }
+
+    .main-copy {
+        padding: 0;
+        margin: 0;
+        width: 40%;
+    }
+
+    p.subtitle {
+        padding: 0;
+    }
+
+    h1 {
+        margin-top: 2em;
+    }
+
+    ul.featured-cabins {
+        margin: 0;
+    }
+
+    .last-container {
+        padding: 4em;
+    }
+
+    .main-quote,
+    .main-cite {
+        display: block;
+        text-align: center;
+    }
+
+    .main-cite {
+        margin-bottom: 4em;
+    }
+
+    .bio {
+        width: 90%;
+    }
+
+    ul.testimonials {
+        grid-template-columns: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    ul.testimonials li {
+        display: flex;
+        margin: 0 0 0 1em;
+    }
+
+    .test-left {
+        margin-left: 1em;
+        padding: 0;
+    }
+
+    h3 {
+        margin-top: 0;
+    }
+
+    .test-left > * {
+        margin: 0;
+    }
+
+    p.test-auth {
+        margin-top: 1em;
+    }
+
+    .fern {
+        width: 20%;
+    }
+
+    p.subtitle {
+        margin-top: 0;
+    }
+
 }
