--- a/sub.css
+++ b/sub.css
@@ -46,6 +46,8 @@ ul.featured-cabins {
   place-content: center;
   grid-template-columns: repeat(auto-fit, minmax(0, 200px));
   margin-top: 5em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cabin-cta span {
